--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.1"
-    , "jade": ">= 0.0.1"
+  "name": "hack-trnandlit",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app"
+  },
+  "dependencies": {
+    "express": "3.0.2",
+    "jade": "*"
   }
 }
