--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "express": "3.0.2",
     "jade": "*",
     "socket.io": "0.9.11"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
